# streamwatch-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CRUSH.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  activate_dev.sh  chat-code-review.md  mypy.ini  pyproject.toml  pytest.ini  requirements-frozen.txt  requirements.txt  setup.py
.github/: FUNDING.yml
.github/chatmodes/: Beast Mode.chatmode.md
docs/: api.rst  conf.py  index.html  index.rst  modules.rst  script.js  streamwatch.app.rst  streamwatch.cache.rst  streamwatch.commands.base.rst  streamwatch.commands.invoker.rst  streamwatch.commands.playback_commands.rst  streamwatch.commands.recording_commands.rst  streamwatch.commands.rst  streamwatch.commands.stream_commands.rst  streamwatch.config.rst  streamwatch.constants.rst  streamwatch.container.rst  streamwatch.core.rst  streamwatch.database.rst  streamwatch.exceptions.rst  streamwatch.logging_config.rst  streamwatch.main.rst  streamwatch.menu_handler.rst  streamwatch.migration.rst  streamwatch.models.rst  streamwatch.naming_standards.rst  streamwatch.performance.rst  streamwatch.playback_controller.rst  streamwatch.player.rst  streamwatch.rate_limiter.rst  streamwatch.recording.rst  streamwatch.recording_menu.rst  streamwatch.resilience.rst  streamwatch.result.rst  streamwatch.rst  streamwatch.stream_checker.rst  streamwatch.stream_manager.rst  streamwatch.stream_utils.rst  streamwatch.stubs.rst  streamwatch.ui.display.rst  (+8 more)
scripts/: build_docs.py
src/streamwatch/: __init__.py  app.py  cache.py  config.py  constants.py  container.py  core.py  database.py  exceptions.py  logging_config.py  main.py  menu_handler.py  migration.py  models.py  naming_standards.py  performance.py  playback_controller.py  player.py  rate_limiter.py  recording.py  recording_menu.py  resilience.py  result.py  storage.py  stream_checker.py  stream_manager.py  stream_utils.py  ui.py  ui_security.py  validation_utils.py  validators.py
src/streamwatch/commands/: __init__.py  base.py  invoker.py  playback_commands.py  recording_commands.py  stream_commands.py
src/streamwatch/stubs/: __init__.py  streamlink.pyi
src/streamwatch/ui/: __init__.py  display.py  input_handler.py  pagination.py  styles.py
stream_manager_cli/: config.py  player.py  storage.py  stream_manager.py
streamwatch/: __init__.py  config.py  core.py  main.py  player.py  storage.py  stream_checker.py  stream_utils.py  ui.py
tests/: conftest.py  test_stream_utils.py  test_utils.py
tests/fixtures/: sample_data.py
tests/integration/: test_config_loading.py  test_stream_workflow.py
tests/unit/: test_config.py  test_core.py  test_database.py  test_exceptions.py  test_menu_handler.py  test_models.py  test_playback_controller.py  test_player.py  test_player_extended.py  test_result.py  test_storage.py  test_stream_checker.py  test_stream_manager.py  test_stream_utils.py  test_stream_utils_extended.py  test_ui.py  test_validators.py
