[project]
name = "streamwatch"
version = "0.3.5"
description = "A CLI tool to manage, check status, and play favorite live streams."
readme = "README.md"
authors = [
    { name = "Johny Snow", email = "snowballons@protonmail.com" }
]
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "streamlink>=6.0.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.9.5",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "certifi",
    "lxml",
    "pycryptodome",
    "websocket-client",
]
keywords = ["stream", "streamlink", "twitch", "youtube", "live", "cli", "manager", "player", "interactive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "twine"]

[project.urls]
Homepage = "https://snowballons.github.io/streamwatch-cli"
Documentation = "https://github.com/snowballons/streamwatch-cli#readme"
Repository = "https://github.com/snowballons/streamwatch-cli"

[project.scripts]
streamwatch = "streamwatch.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
