[project]
name = "streamwatch"
version = "0.4.0"
description = "A CLI tool to manage, check status, and play favorite live streams."
readme = "README.md"
authors = [
    { name = "Johny Snow", email = "snowballons@protonmail.com" }
]
requires-python = ">=3.8.1"
license = { file = "LICENSE" }
dependencies = [
    "streamlink>=6.0.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.9.5",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "certifi",
    "lxml",
    "pycryptodome",
    "websocket-client",
    "pydantic>=2.0.0",
    "validators>=0.22.0",
    "yt-dlp>=2024.10.22",
]
keywords = ["stream", "streamlink", "twitch", "youtube", "live", "cli", "manager", "player", "interactive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-asyncio",
    "twine",
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "mypy",
    "types-requests",
    "bandit"
]
gui = [
    "PyQt5>=5.15.0",
    "PyQtWebEngine>=5.15.0",
    "PyQt5-tools>=5.15.0"
]

[project.urls]
Homepage = "https://snowballons.github.io/streamwatch-cli"
Documentation = "https://github.com/snowballons/streamwatch-cli#readme"
Repository = "https://github.com/snowballons/streamwatch-cli"

[project.scripts]
streamwatch = "streamwatch.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "bandit>=1.7.0",
    "types-requests>=2.28.0",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
gui = [
    "PyQt5>=5.15.0",
    "PyQtWebEngine>=5.15.0",
    "PyQt5-tools>=5.15.0"
]

[tool.mypy]
mypy_path = "src"
python_version = "3.8"
